@@ -1,3 +1,15 @@
+2019-01-11 belangeo <belangeo@gmail.com>
+
+    * Added setStopDelay method to PyoObjectBase class.
+
+2019-01-09 belangeo <belangeo@gmail.com>
+
+    * Added examples about multirate processing/synthesis.
+
+2019-01-08 belangeo <belangeo@gmail.com>
+
+    * Fixed all variant of audio arithmetic.
+
 2018-12-28 belangeo <belangeo@gmail.com>
 
     * Added a new object: SVF2, a 2-pole state variable filter with many filter types.
